# GPTContextCollector

./: .gitignore  README.md  main.pyw  pyproject.toml  run.sh
cache/: last_file_cache.txt  last_open_cache.txt
code/: utils.py
src/: cli.py  main.py
src/gptcontextcollector/: cli.py  main.py  utils.py
src/gptcontextcollector/ui/: main.py
ui/: main.bat  main.py  main.ui
