[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptcontextcollector"
version = "1.0.0"
description = "Collect file contexts for GPT/LLM prompts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Beltran Offerrall"}
]
keywords = ["gpt", "context", "llm", "clipboard", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]
dependencies = [
    "PySide6>=6.5.0",
]

[project.scripts]
gpt = "gptcontextcollector.cli:main"

[project.urls]
Homepage = "https://github.com/offerrall/gptcontextcollector"
Repository = "https://github.com/offerrall/gptcontextcollector"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gptcontextcollector = [
    "ui/*.ico",
    "ui/*.ui",
    "ui/*.png",
]